--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ jdk:
 script: "mvn cobertura:cobertura"
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -t 01b40b5b-fb93-4019-8a24-e764c606d189
