--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	</properties>
 
 	<dependencies>
+		<!-- Testing Dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -30,6 +31,17 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- END Testing Dependencies -->
+
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.25</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -83,6 +95,8 @@
 						<exclude>**/com/meli/**/config/**/*</exclude>
 						<exclude>**/com/meli/**/model/**/*</exclude>
 						<exclude>**/com/meli/mutant/StreamLambdaHandler.class</exclude>
+						<exclude>**/com/meli/mutant/infraestructure/imp/AWSProxyDatabaseConnection.class</exclude>
+						<exclude>**/com/meli/mutant/dao/imp/StatsDao.class</exclude>
 					</excludes>
 				</configuration>
 				<executions>
@@ -225,6 +239,14 @@
 						<format>xml</format>
 					</formats>
 					<check />
+					<instrumentation>
+						<excludes>
+							<exclude>**/com/meli/**/config/**/*</exclude>
+							<exclude>**/com/meli/mutant/model/DNAString.class</exclude>
+							<exclude>**/com/meli/mutant/model/Dna.class</exclude>
+							<exclude>**/com/meli/mutant/StreamLambdaHandler.class</exclude>
+						</excludes>
+					</instrumentation>
 				</configuration>
 			</plugin>
 
