--- a/pom.xml
+++ b/pom.xml
@@ -244,7 +244,10 @@
 							<exclude>**/com/meli/**/config/**/*</exclude>
 							<exclude>**/com/meli/mutant/model/DNAString.class</exclude>
 							<exclude>**/com/meli/mutant/model/Dna.class</exclude>
+							<exclude>**/com/meli/mutant/model/Stats.class</exclude>
 							<exclude>**/com/meli/mutant/StreamLambdaHandler.class</exclude>
+							<exclude>**/com/meli/mutant/dao/imp/StatsDao.class</exclude>
+							<exclude>**/com/meli/mutant/infraestructure/imp/AWSProxyDatabaseConnection.class</exclude>
 						</excludes>
 					</instrumentation>
 				</configuration>
