--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,20 @@
 			<artifactId>aws-lambda-java-core</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.3</version>
+		</dependency>
+
+
 		<!-- <dependency> <groupId>com.amazonaws</groupId> <artifactId>aws-lambda-java-events</artifactId> 
 			<version>3.1.0</version> </dependency> -->
 	</dependencies>
@@ -93,7 +107,7 @@
 				<configuration>
 					<excludes>
 						<exclude>**/com/meli/**/config/**/*</exclude>
-						<exclude>**/com/meli/**/model/**/*</exclude>
+						<exclude>**/com/meli/**/model/**/*</exclude>						
 						<exclude>**/com/meli/mutant/StreamLambdaHandler.class</exclude>
 						<exclude>**/com/meli/mutant/infraestructure/imp/AWSProxyDatabaseConnection.class</exclude>
 						<exclude>**/com/meli/mutant/dao/imp/StatsDao.class</exclude>
